Added CSV files

--- a/cs2_lab_final_project/db.qrc
+++ b/cs2_lab_final_project/db.qrc
@@ -1,1 +1,7 @@
-<RCC/>
+<RCC>
+    <qresource prefix="/db">
+        <file>db/items.csv</file>
+        <file>db/operation_records.csv</file>
+        <file>db/users.csv</file>
+    </qresource>
+</RCC>
