--- a/cs2_lab_final_project/loginform.ui
+++ b/cs2_lab_final_project/loginform.ui
@@ -71,13 +71,16 @@
      <height>28</height>
     </rect>
    </property>
+   <property name="echoMode">
+    <enum>QLineEdit::EchoMode::Password</enum>
+   </property>
   </widget>
   <widget class="QLabel" name="label_Question">
    <property name="geometry">
     <rect>
      <x>60</x>
      <y>270</y>
-     <width>121</width>
+     <width>141</width>
      <height>21</height>
     </rect>
    </property>
@@ -88,8 +91,8 @@
   <widget class="QPushButton" name="pushButton_Sign_Up">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>260</y>
+     <x>210</x>
+     <y>270</y>
      <width>83</width>
      <height>29</height>
     </rect>
