Added inventorysystem pointer to some classes

--- a/cs2_lab_final_project/signupform.ui
+++ b/cs2_lab_final_project/signupform.ui
@@ -32,6 +32,9 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="echoMode">
+    <enum>QLineEdit::EchoMode::Password</enum>
+   </property>
   </widget>
   <widget class="QLineEdit" name="lineEditReenterPassword">
    <property name="geometry">
