Added Default Data

--- a/cs2_lab_final_project/db.qrc
+++ b/cs2_lab_final_project/db.qrc
@@ -1,3 +1,7 @@
 <RCC>
-    <qresource prefix="/db"/>
+    <qresource prefix="/db">
+        <file>default_items.csv</file>
+        <file>default_operations.csv</file>
+        <file>default_users.csv</file>
+    </qresource>
 </RCC>
