--- a/cs2_lab_final_project/adminform.ui
+++ b/cs2_lab_final_project/adminform.ui
@@ -80,6 +80,12 @@
       </item>
       <item>
        <widget class="QPushButton" name="addnewUserPushButton">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>35</height>
+         </size>
+        </property>
         <property name="text">
          <string>Add new User</string>
         </property>
