--- a/cs2_lab_final_project/dashboard.ui
+++ b/cs2_lab_final_project/dashboard.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>537</width>
+    <height>455</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QPushButton" name="pushButton_Report">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>230</y>
+     <x>90</x>
+     <y>320</y>
      <width>101</width>
      <height>29</height>
     </rect>
@@ -29,8 +29,8 @@
   <widget class="QLabel" name="label_BestSeller">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>20</y>
+     <x>100</x>
+     <y>110</y>
      <width>181</width>
      <height>31</height>
     </rect>
@@ -42,8 +42,8 @@
   <widget class="QLabel" name="label_lowesrSeller">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>90</y>
+     <x>100</x>
+     <y>180</y>
      <width>221</width>
      <height>31</height>
     </rect>
@@ -55,8 +55,8 @@
   <widget class="QLabel" name="label_LowStock">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>160</y>
+     <x>100</x>
+     <y>250</y>
      <width>251</width>
      <height>31</height>
     </rect>
@@ -68,8 +68,8 @@
   <widget class="QLabel" name="label_BestSellerSold">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>50</y>
+     <x>100</x>
+     <y>140</y>
      <width>171</width>
      <height>31</height>
     </rect>
@@ -81,8 +81,8 @@
   <widget class="QLabel" name="label_LowestSellerSold">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>120</y>
+     <x>100</x>
+     <y>210</y>
      <width>171</width>
      <height>31</height>
     </rect>
@@ -94,14 +94,33 @@
   <widget class="QLabel" name="label_OnlyLeft">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>190</y>
+     <x>100</x>
+     <y>280</y>
      <width>171</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
     <string>Only left: </string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="goBackPushButton">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>20</y>
+     <width>81</width>
+     <height>65</height>
+    </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>65</width>
+     <height>65</height>
+    </size>
+   </property>
+   <property name="text">
+    <string>Go Back</string>
    </property>
   </widget>
  </widget>
