--- a/cs2_lab_final_project/editroleform.ui
+++ b/cs2_lab_final_project/editroleform.ui
@@ -49,13 +49,13 @@
     </rect>
    </property>
    <property name="text">
-    <string>Passwors should contain at least one uppercase and lowercase character</string>
+    <string>Password should include at least one uppercase, one lowercase character and one number.</string>
    </property>
    <property name="wordWrap">
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -88,7 +88,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>170</x>
