--- a/cs2_lab_final_project/dashboard.ui
+++ b/cs2_lab_final_project/dashboard.ui
@@ -123,6 +123,24 @@
     <string>Go Back</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>20</y>
+     <width>121</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>16</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Welcome!</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
