--- a/cs2_lab_final_project/systemui.ui
+++ b/cs2_lab_final_project/systemui.ui
@@ -44,6 +44,19 @@
          </spacer>
         </item>
         <item>
+         <widget class="QPushButton" name="pushButton_Theme">
+          <property name="text">
+           <string>PushButton</string>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>30</width>
+            <height>30</height>
+           </size>
+          </property>
+         </widget>
+        </item>
+        <item>
          <layout class="QHBoxLayout" name="horizontalLayout_5">
           <item>
            <spacer name="horizontalSpacer_3">
