--- a/cs2_lab_final_project/systemui.ui
+++ b/cs2_lab_final_project/systemui.ui
@@ -44,19 +44,6 @@
          </spacer>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_Theme">
-          <property name="text">
-           <string>PushButton</string>
-          </property>
-          <property name="iconSize">
-           <size>
-            <width>30</width>
-            <height>30</height>
-           </size>
-          </property>
-         </widget>
-        </item>
-        <item>
          <layout class="QHBoxLayout" name="horizontalLayout_5">
           <item>
            <spacer name="horizontalSpacer_3">
@@ -93,6 +80,25 @@
              </size>
             </property>
            </spacer>
+          </item>
+          <item>
+           <widget class="QPushButton" name="pushButton_Theme">
+            <property name="minimumSize">
+             <size>
+              <width>40</width>
+              <height>75</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>PushButton</string>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>30</width>
+              <height>30</height>
+             </size>
+            </property>
+           </widget>
           </item>
           <item>
            <widget class="QPushButton" name="signoutPushButton">
