--- a/cs2_lab_final_project/dashboard.ui
+++ b/cs2_lab_final_project/dashboard.ui
@@ -43,7 +43,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>180</y>
+     <y>140</y>
      <width>221</width>
      <height>31</height>
     </rect>
@@ -56,52 +56,13 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>250</y>
+     <y>180</y>
      <width>251</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
     <string>Low Stock: </string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_BestSellerSold">
-   <property name="geometry">
-    <rect>
-     <x>100</x>
-     <y>140</y>
-     <width>171</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Sold: </string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_LowestSellerSold">
-   <property name="geometry">
-    <rect>
-     <x>100</x>
-     <y>210</y>
-     <width>171</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Sold: </string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_OnlyLeft">
-   <property name="geometry">
-    <rect>
-     <x>100</x>
-     <y>280</y>
-     <width>171</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Only left: </string>
    </property>
   </widget>
   <widget class="QPushButton" name="goBackPushButton">
@@ -139,6 +100,16 @@
    </property>
    <property name="text">
     <string>Welcome!</string>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="lowStock_textEdit">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>210</y>
+     <width>161</width>
+     <height>91</height>
+    </rect>
    </property>
   </widget>
  </widget>
