--- a/cs2_lab_final_project/inventoryform.ui
+++ b/cs2_lab_final_project/inventoryform.ui
@@ -224,6 +224,32 @@ li.checked::marker { content: &quot;\2612&quot;; }
     <string>Go back</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButtonSelectPhoto">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>570</y>
+     <width>161</width>
+     <height>29</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Select photo</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_11">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>560</y>
+     <width>251</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Select a photo before clicking add:</string>
+   </property>
+  </widget>
   <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
