--- a/cs2_lab_final_project/dashboard.ui
+++ b/cs2_lab_final_project/dashboard.ui
@@ -6,12 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>537</width>
+    <width>979</width>
     <height>455</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
+  </property>
+  <property name="inputMethodHints">
+   <set>Qt::InputMethodHint::ImhMultiLine</set>
   </property>
   <widget class="QPushButton" name="pushButton_Report">
    <property name="geometry">
@@ -136,6 +139,29 @@
    </property>
    <property name="text">
     <string>Add item</string>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="textEdit">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>200</y>
+     <width>251</width>
+     <height>161</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>570</x>
+     <y>170</y>
+     <width>121</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Recent Updates:</string>
    </property>
   </widget>
  </widget>
