Adding logs phase 1

--- a/cs2_lab_final_project/dashboard.ui
+++ b/cs2_lab_final_project/dashboard.ui
@@ -164,6 +164,19 @@
     <string>Recent Updates:</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton_Logs">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>410</y>
+     <width>83</width>
+     <height>29</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Logs</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
